refactor(QuoteController): store method refactor(api.yaml): change name chore: change db seeder data
